--- a/project1/index.html
+++ b/project1/index.html
@@ -1,7 +1,53 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>Connor's Website</title>
+	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
+	<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 <body>
-<h1>Welcome to my CIS-91 project!</h1>
-<p>Connor Munger</p>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  	<div class="container">
+    	<div class="navbar-header">
+    	  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    	    <span class="sr-only">Toggle navigation</span>
+    	    <span class="icon-bar"></span>
+    	    <span class="icon-bar"></span>
+    	    <span class="icon-bar"></span>
+    	  </button>
+    	  <a class="navbar-brand" href="#">CIS-91</a>
+    	</div>
+    	<div id="navbar" class="collapse navbar-collapse">
+    	  <ul class="nav navbar-nav">
+    	    <li class="active"><a href="#">Home</a></li>
+   	 	    <li><a href="#about">About</a></li>
+    	    <li><a href="#contact">Contact</a></li>
+    	  </ul>
+    	  <ul class="nav navbar-nav navbar-right">
+    	    <li><a href="#login">Login  <i class="fa fa-user"></i></a></li>
+    	  </ul>
+    	</div>
+  	</div>
+</nav>
+
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<div id="content">
+				<h1>CIS-91</h1>
+				<h3>Introduction to Cloud Computing</h3>
+				<hr>
+				<button class="btn btn-default btn-lg3" onclick="window.location.href='https://www.lifealgorithmic.com/cis-91/index.html'"><i class="fa fa-cogs"></i>  Let's Go!</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
